alignment issues fixed in HWSCAN

--- a/vtr-ui/src/app/components/pages/page-hardwarescan/children/recover-bad-sectors/recover-bad-sectors.component.scss
+++ b/vtr-ui/src/app/components/pages/page-hardwarescan/children/recover-bad-sectors/recover-bad-sectors.component.scss
@@ -117,3 +117,15 @@
 		}
 	}
 }
+
+.hardware-scan-modal-size {
+	.modal-dialog {		
+		.modal-content {			
+			.description {
+				.question {
+					margin-bottom:2rem!important;
+				}
+			}
+		}
+	}
+}
